# atomic

./: .drone.star  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam
.drone/: drone.sh
.github/workflows/: ci.yml
config/: Jamfile.v2
config/visibility/: Jamfile.jam  visibility.cpp
doc/: atomic.qbk  changelog.qbk
include/boost/atomic/: atomic.hpp  atomic_flag.hpp  atomic_ref.hpp  capabilities.hpp  fences.hpp  ipc_atomic.hpp  ipc_atomic_flag.hpp  ipc_atomic_ref.hpp  posix_clock_traits_fwd.hpp  smt_pause.hpp  thread_pause.hpp  wait_result.hpp
include/boost/atomic/detail/: addressof.hpp  aligned_variable.hpp  atomic_flag.hpp  atomic_flag_impl.hpp  atomic_impl.hpp  atomic_ref_impl.hpp  atomic_ref_template.hpp  atomic_template.hpp  atomic_traits_fwd.hpp  bitwise_cast.hpp  bitwise_fp_cast.hpp  capabilities.hpp  caps_arch_gcc_arm.hpp  caps_arch_gcc_x86.hpp  caps_arch_msvc_x86.hpp  caps_gcc_aarch64.hpp  caps_gcc_arm.hpp  caps_gcc_atomic.hpp  caps_gcc_ppc.hpp  caps_gcc_sparcv9.hpp  caps_gcc_sync.hpp  caps_gcc_x86.hpp  caps_linux_arm.hpp  caps_msvc_arm.hpp  caps_msvc_x86.hpp  caps_windows.hpp  caps_xlcpp_zos.hpp  cas32strong.hpp  casts.hpp  chrono.hpp  classify.hpp  config.hpp  core_arch_ops_gcc_aarch32.hpp  core_arch_ops_gcc_aarch64.hpp  core_arch_ops_gcc_alpha.hpp  core_arch_ops_gcc_arm.hpp  core_arch_ops_gcc_ppc.hpp  core_arch_ops_gcc_x86.hpp  core_arch_ops_msvc_x86.hpp  core_ops_gcc_atomic.hpp  (+83 more)
include/boost/atomic/detail/type_traits/: alignment_of.hpp  has_unique_object_representations.hpp  integral_constant.hpp  is_class.hpp  is_floating_point.hpp  is_integral.hpp  is_signed.hpp  make_signed.hpp  make_unsigned.hpp
meta/: libraries.json
src/: lock_pool.cpp  lockpool.cpp  wait_ops_windows.cpp
test/: CMakeLists.txt  Jamfile.v2  aligned_object.hpp  api_test_helpers.hpp  atomic_api.cpp  atomic_wrapper.hpp  atomicity.cpp  atomicity_ref.cpp  fallback_api.cpp  fallback_ref_api.cpp  ipc_atomic_api.cpp  ipc_atomic_ref_api.cpp  ipc_wait_api.cpp  ipc_wait_ref_api.cpp  ipc_wait_test_helpers.hpp  lockfree.cpp  native_api.cpp  native_ref_api.cpp  ordering.cpp  ordering_ref.cpp  test_clock.hpp  wait_api.cpp  wait_fuzz.cpp  wait_ref_api.cpp  wait_test_helpers.hpp
test/cmake_install_test/: CMakeLists.txt
test/test_cmake/: CMakeLists.txt  main.cpp
